test/spec_vectors/br/fail/module_20.wat
(module (func $large-label (br 268435457)))